--- a/app/src/main/res/layout/layout_statistics_fragment.xml
+++ b/app/src/main/res/layout/layout_statistics_fragment.xml
@@ -11,14 +11,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp">
+        android:gravity="center_vertical"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="4dp">
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/stats_chip_group_games"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:chipSpacing="10dp"
+            android:layout_weight="1"
+            app:chipSpacing="6dp"
             app:selectionRequired="true"
             app:singleSelection="true">
 
@@ -53,9 +55,11 @@
             android:id="@+id/stats_total_values"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="10dp"
-            android:textAppearance="@style/regularText" />
+            android:layout_marginStart="8dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:textColor="#666666"
+            android:textSize="12sp" />
 
     </LinearLayout>
 
