--- a/app/src/main/res/layout/fragment_games_container.xml
+++ b/app/src/main/res/layout/fragment_games_container.xml
@@ -14,6 +14,7 @@
         app:tabIndicatorColor="@color/colorPrimary"
         app:tabSelectedTextColor="@color/colorPrimary"
         app:tabTextColor="@android:color/darker_gray"
+        app:tabTextAppearance="@style/AppTabTextAppearance"
         app:tabMode="fixed"
         app:tabGravity="fill" />
 
