--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -30,6 +30,11 @@
                 android:title="@string/nav_getting_started"
                 android:visible="true" />
             <item
+                android:id="@+id/nav_invite_friends"
+                android:icon="@drawable/share"
+                android:title="@string/nav_invite_friends"
+                android:visible="true" />
+            <item
                 android:id="@+id/nav_about"
                 android:icon="@drawable/nav_info"
                 android:title="@string/nav_about"
