--- a/app/src/main/res/layout/player_team_item.xml
+++ b/app/src/main/res/layout/player_team_item.xml
@@ -27,6 +27,7 @@
 
     <!-- Result Indicators -->
     <LinearLayout
+        android:id="@+id/res_indicators"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="3dp"
