--- a/app/src/main/res/layout/fragment_games_container.xml
+++ b/app/src/main/res/layout/fragment_games_container.xml
@@ -10,10 +10,10 @@
         android:id="@+id/games_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        app:tabIndicatorColor="@color/colorPrimary"
-        app:tabSelectedTextColor="@color/colorPrimary"
-        app:tabTextColor="@android:color/darker_gray"
+        android:background="@color/colorPrimary"
+        app:tabIndicatorColor="@color/colorAccent"
+        app:tabSelectedTextColor="@android:color/white"
+        app:tabTextColor="@color/tab_text_unselected"
         app:tabTextAppearance="@style/AppTabTextAppearance"
         app:tabMode="fixed"
         app:tabGravity="fill" />
