--- a/app/src/main/res/layout/player_details_activity.xml
+++ b/app/src/main/res/layout/player_details_activity.xml
@@ -20,6 +20,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
+        app:tabIndicatorColor="@color/colorAccent"
+        app:tabSelectedTextColor="@android:color/white"
+        app:tabTextColor="@color/tab_text_unselected"
         app:tabTextAppearance="@style/AppTabTextAppearance" />
 
     <androidx.viewpager.widget.ViewPager
