--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <resources>
+    <!-- Shared min height for chart/team pill tabs and chips -->
+    <dimen name="chart_pill_min_height">40dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="nav_header_vertical_spacing">10dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
