--- a/app/src/main/res/layout/fragment_games_charts_container.xml
+++ b/app/src/main/res/layout/fragment_games_charts_container.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal"
         android:gravity="center"
         android:padding="8dp"
-        android:background="@color/colorPrimary">
+        android:background="@drawable/tab_bar_with_top_border">
 
         <RadioButton
             android:id="@+id/tab_goal_diff_distribution"
