--- a/app/src/main/res/layout/fragment_statistics_container.xml
+++ b/app/src/main/res/layout/fragment_statistics_container.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
+        android:elevation="4dp"
         app:tabGravity="fill"
         app:tabIndicatorColor="@color/colorAccent"
         app:tabMode="fixed"
